  
  o Commands now can create sections (by default at level 3) and a table of contents in the R Markdown document produced by the R Commander (suggestion of Bob Muenchen).
  
  o RGL in RMarkdown now works with pdf, rtf, and word file formats as well as html, still requires Pandoc (suggestion of Georges Monette).
  
  o Small improvements.

Changes in version 2.7-1

  o Updated Polish translation, thanks to Lukasz Daniel.
  
  o Fixed mixed-up .mo files for Spanish and Brazilian-Portuguese translations (problem reported by Jose Henrique Hildebrand Grisi Filho).
  
  o Small bug fixes to and improvements to repeated-measures dialogs.

Changes in version 2.7-0

  o New dialogs for repeated-measures ANOVA and ANCOVA and plots with one or two repeated-measures factors.
  
  o New dialogs to reshape data sets from wide to long and from long to wide.

  o Better handling of discrete numeric variables (after suggestions by Ethan Harris).
  
  o Fix clipboard data set input to work on macOS.
  
  o Improved pie charts and bar graphs via the piechart() and Barplot() functions in RcmdrMisc.
  
  o New File > Exit > Restart Commander menu item (suggestion of Vilmantas Gegzna).
  
  o Fix Tk error produced by closing the dataset viewer and then repopening the same data set (reported by Jose G. Conde).
  
  o Fixes to handling panes with console.output and log.commands options set to various values  (thanks to Vilmantas Gegzna).
  
  o Better handling of character data following change to stringsAsFactor option in R 4.0.0+.
  
  o Check for presence of Tktable and adapt to its absence by suppressing the Rcmdr dataset editor and delta method menu item; Tktable eventually to be replaced with tablelist.
  
  o Small improvements and bug fixes.
  