@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 2.8-0
-Date: 2022-07-06
+Date: 2022-07-08
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Milan", "Bouchet-Valat", role = "aut"),
